--- a/packages/orderbook/package.json
+++ b/packages/orderbook/package.json
@@ -4,16 +4,20 @@
   "author": "Immutable",
   "bugs": "https://github.com/immutable/ts-immutable-sdk/issues",
   "dependencies": {
-    "@imtbl/config": "0.0.0"
+    "@imtbl/config": "0.0.0",
+    "@opensea/seaport-js": "^1.3.0",
+    "ethers": "^5.7.2"
   },
   "devDependencies": {
     "@rollup/plugin-typescript": "^11.0.0",
     "@swc/jest": "^0.2.24",
+    "@typechain/ethers-v5": "^10.2.1",
     "@types/jest": "^29.4.3",
     "eslint": "^8.40.0",
     "jest": "^29.4.3",
     "jest-environment-jsdom": "^29.4.3",
     "rollup": "^3.17.2",
+    "typechain": "^8.1.1",
     "typescript": "^4.9.5"
   },
   "homepage": "https://github.com/immutable/ts-immutable-sdk#readme",
@@ -23,6 +27,7 @@
   "repository": "immutable/ts-immutable-sdk.git",
   "scripts": {
     "build": "NODE_ENV=production rollup --config rollup.config.js",
+    "generate-types": "typechain --target=ethers-v5 --out-dir=src/typechain/types 'abi/*.json'",
     "lint": "eslint ./src --ext .ts,.jsx,.tsx --max-warnings=0",
     "test": "jest",
     "typecheck": "tsc --noEmit --jsx preserve"
