--- a/packages/checkout/sdk-sample-app/package.json
+++ b/packages/checkout/sdk-sample-app/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^6.11.0"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.0.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
