--- a/packages/provider/src/sample-app/package.json
+++ b/packages/provider/src/sample-app/package.json
@@ -3,14 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@biom3/react": "^0.2.9-beta",
-    "@imtbl/core-sdk": "^1.0.1",
+    "@biom3/react": "^0.4.2-beta",
+    "@imtbl/core-sdk": "^1.1.1-alpha.1",
     "@imtbl/sdk": "0.0.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.13",
+    "@types/jest": "^29.4.3",
+    "@types/node": "^18.14.2",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "react": "^18.2.0",
