--- a/packages/provider/src/sample-app/package.json
+++ b/packages/provider/src/sample-app/package.json
@@ -42,6 +42,6 @@
   "scripts": {
     "build": "react-app-rewired build",
     "start": "react-app-rewired start",
-    "test": "react-app-rewired test"
+    "test": "react-app-rewired test --passWithNoTests"
   }
 }
