--- a/packages/orderbook/package.json
+++ b/packages/orderbook/package.json
@@ -17,6 +17,7 @@
     "jest": "^29.4.3",
     "jest-environment-jsdom": "^29.4.3",
     "rollup": "^3.17.2",
+    "ts-mockito": "^2.6.1",
     "typechain": "^8.1.1",
     "typescript": "^4.9.5"
   },
