--- a/sdk/package.json
+++ b/sdk/package.json
@@ -11,6 +11,7 @@
     "@imtbl/core-sdk": "^1.1.1-alpha.1",
     "@magic-ext/oidc": "^1.0.1",
     "@metamask/detect-provider": "^2.0.0",
+    "@opensea/seaport-js": "^1.3.0",
     "axios": "^1.3.5",
     "bn.js": "^5.2.1",
     "enc-utils": "^3.0.0",
