--- a/packages/checkout/widgets-lib/package.json
+++ b/packages/checkout/widgets-lib/package.json
@@ -14,14 +14,15 @@
     ]
   },
   "dependencies": {
-    "@biom3/design-tokens": "0.1.4-beta",
-    "@biom3/react": "^0.4.2-beta",
+    "@biom3/design-tokens": "0.1.5-beta",
+    "@biom3/react": "^0.5.0-beta",
     "@ethersproject/providers": "^5.7.2",
     "@imtbl/checkout-sdk": "0.0.0",
     "@imtbl/checkout-widgets": "0.0.0",
     "@imtbl/config": "0.0.0",
     "@imtbl/cryptofiat": "0.0.0",
     "ethers": "^5.7.2",
+    "lodash.debounce": "^4.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.0"
