--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "homepage": "https://github.com/immutable/ts-immutable-sdk#readme",
   "license": "Apache-2.0",
   "lint-staged": {
+    "*": "yarn scan:secrets",
     "*.{js,jsx,ts,tsx}": "eslint"
   },
   "packageManager": "yarn@3.5.0",
@@ -35,11 +36,12 @@
     "@biom3/design-tokens": "0.1.5-beta"
   },
   "scripts": {
+    "scan:secrets": "gitleaks protect --staged -v",
     "build": "wsrun -p @imtbl/sdk -p @imtbl/checkout-widgets-lib -e -r --stages build && yarn syncpack:format && yarn wsrun -p @imtbl/sdk -a -m copyBrowserBundles",
     "build:all": "wsrun --stages build",
     "lint": "wsrun --exclude-missing -e lint --no-error-on-unmatched-pattern",
     "lint:ci": "./lint-ci.sh",
-    "postinstall": "husky install",
+    "postinstall": "husky install; ./.husky/install_gitleaks.sh",
     "release": "release-it",
     "syncpack:check": "yarn syncpack list-mismatches",
     "syncpack:fix": "yarn syncpack fix-mismatches",
