--- a/packages/checkout/widgets-lib/package.json
+++ b/packages/checkout/widgets-lib/package.json
@@ -21,6 +21,7 @@
     "@imtbl/checkout-widgets": "0.0.0",
     "@imtbl/config": "0.0.0",
     "@imtbl/cryptofiat": "0.0.0",
+    "@imtbl/dex-sdk": "0.0.0",
     "ethers": "^5.7.2",
     "lodash.debounce": "^4.0.8",
     "react": "^18.2.0",
