--- a/packages/checkout/widgets/package.json
+++ b/packages/checkout/widgets/package.json
@@ -39,7 +39,7 @@
     "lint": "eslint ./src --ext .ts,.jsx,.tsx --max-warnings=0",
     "lint:fix": "eslint ./src --ext .ts,.jsx,.tsx --max-warnings=0 --fix",
     "start": "parcel watch",
-    "test": "jest test"
+    "test": "jest test --passWithNoTests"
   },
   "source": "src/index.ts",
   "types": "dist/index.d.ts"
