wt-1359 patch imports

--- a/packages/checkout/widgets-lib/tsconfig.json
+++ b/packages/checkout/widgets-lib/tsconfig.json
@@ -18,5 +18,5 @@
     "noImplicitAny": false,
     "experimentalDecorators": true
   },
-  "include": ["src"]
+  "include": ["src", "babel.config.js"]
 }
