--- a/packages/checkout/widgets/package.json
+++ b/packages/checkout/widgets/package.json
@@ -26,12 +26,18 @@
     "typedoc-plugin-markdown": "^3.15.2",
     "typescript": "^4.9.5"
   },
+  "homepage": "https://github.com/immutable/ts-immutable-sdk",
+  "keywords": [
+    "immutable"
+  ],
   "license": "ISC",
-  "module": "dist/index.js",
+  "main": "dist/main.js",
+  "module": "dist/module.js",
   "peerDependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
+  "private": true,
   "scripts": {
     "build": "parcel build",
     "build:dist": "npm i && npm run build && npm run dist",
