--- a/packages/economy/playground/package.json
+++ b/packages/economy/playground/package.json
@@ -13,11 +13,13 @@
     "crypto-browserify": "^3.12.0",
     "https-browserify": "^1.0.0",
     "lit": "^2.7.2",
+    "moment": "^2.29.4",
     "os-browserify": "^0.3.0",
     "process": "^0.11.10",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
     "url": "^0.11.0",
+    "variant-classnames": "^1.3.0",
     "vite-plugin-node-polyfills": "^0.8.2"
   },
   "devDependencies": {
