WT-1359 | Set up global widget config [no-changelog] (#323)
Co-authored-by: Andrea Rampin <andrea.rampin@gmail.com>

--- a/packages/checkout/widgets-lib/package.json
+++ b/packages/checkout/widgets-lib/package.json
@@ -45,17 +45,13 @@
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "jest": {
-    "transformIgnorePatterns": [
-      "node_modules/(?!axios)"
-    ]
-  },
+  "homepage": "https://github.com/immutable/ts-immutable-sdk",
+  "keywords": [
+    "immutable"
+  ],
+  "license": "ISC",
+  "main": "dist/main.js",
+  "module": "dist/module.js",
   "private": true,
   "scripts": {
     "build": "cp src/build.tsx src/index.tsx && GENERATE_SOURCEMAP=false react-scripts build",
@@ -66,7 +62,7 @@
     "lint": "eslint ./src --ext .ts,.jsx,.tsx --max-warnings=0",
     "lint:fix": "eslint ./src --ext .ts,.jsx,.tsx --max-warnings=0 --fix",
     "start": "cp src/app.tsx src/index.tsx && PORT=3001 GENERATE_SOURCEMAP=false react-scripts start",
-    "test": "react-scripts test --passWithNoTests",
+    "test": "jest test --passWithNoTests",
     "test:cypress": "NODE_ENV=test cypress run --component --headless",
     "test:cypress:open": "NODE_ENV=test cypress open --component --browser electron"
   }
