--- a/packages/checkout/widgets/package.json
+++ b/packages/checkout/widgets/package.json
@@ -26,8 +26,13 @@
     "typedoc-plugin-markdown": "^3.15.2",
     "typescript": "^4.9.5"
   },
+  "homepage": "https://github.com/immutable/ts-immutable-sdk",
+  "keywords": [
+    "immutable"
+  ],
   "license": "ISC",
-  "module": "dist/index.js",
+  "main": "dist/main.js",
+  "module": "dist/module.js",
   "peerDependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -39,7 +44,7 @@
     "lint": "eslint ./src --ext .ts,.jsx,.tsx --max-warnings=0",
     "lint:fix": "eslint ./src --ext .ts,.jsx,.tsx --max-warnings=0 --fix",
     "start": "parcel watch",
-    "test": "jest test"
+    "test": "jest test --passWithNoTests"
   },
   "source": "src/index.ts",
   "types": "dist/index.d.ts"
