--- a/packages/checkout/widgets/tsconfig.json
+++ b/packages/checkout/widgets/tsconfig.json
@@ -16,5 +16,8 @@
     "noEmit": true,
     "jsx": "react-jsx"
   },
-  "include": ["src", "babel.config.js", "global.d.ts"]
+  "include": [
+    "src/**/*",
+    "babel.config.js",
+  ]
 }
