--- a/packages/economy/playground/package.json
+++ b/packages/economy/playground/package.json
@@ -28,6 +28,7 @@
     "@storybook/blocks": "^7.0.10",
     "@storybook/web-components": "^7.0.10",
     "@storybook/web-components-vite": "^7.0.10",
+    "chromatic": "^6.17.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "storybook": "^7.0.10",
@@ -45,6 +46,7 @@
     "build": "storybook build",
     "build:app": "tsc && vite build",
     "clean": "rimraf ./dist ./.cache",
+    "chromatic": "chromatic --exit-zero-on-changes",
     "dev": "vite",
     "prestart": "[ -f public/js/imtbl-checkout-widgets.js ] || { echo 'Error: checkout-widgets deps not found. Please run `npm run setup` first.' ; exit 1; }",
     "preview": "vite preview",
