--- a/packages/orderbook/tsconfig.json
+++ b/packages/orderbook/tsconfig.json
@@ -17,6 +17,6 @@
     "resolveJsonModule": true,
     "skipLibCheck": true
   },
-  "include": ["src"],
+  "include": ["src", "src/test"],
   "exclude": ["node_modules", "dist"]
 }
