fix: orderbook e2e test pathing

--- a/packages/orderbook/package.json
+++ b/packages/orderbook/package.json
@@ -32,7 +32,7 @@
     "generate-types": "typechain --target=ethers-v5 --out-dir=src/typechain/types 'abi/*.json'",
     "lint": "eslint ./src --ext .ts,.jsx,.tsx --max-warnings=0",
     "test": "jest",
-    "test:e2e": "jest --runInBand -t src/test/*.e2e.ts",
+    "test:e2e": "jest --runInBand --testMatch \"**/?(*.)+(e2e).[jt]s?(x)\"",
     "typecheck": "tsc --noEmit --jsx preserve"
   },
   "type": "module",
