--- a/packages/orderbook/package.json
+++ b/packages/orderbook/package.json
@@ -13,6 +13,7 @@
     "@swc/jest": "^0.2.24",
     "@typechain/ethers-v5": "^10.2.0",
     "@types/jest": "^29.4.3",
+    "dotenv": "^16.0.3",
     "eslint": "^8.40.0",
     "jest": "^29.4.3",
     "jest-environment-jsdom": "^29.4.3",
@@ -31,6 +32,7 @@
     "generate-types": "typechain --target=ethers-v5 --out-dir=src/typechain/types 'abi/*.json'",
     "lint": "eslint ./src --ext .ts,.jsx,.tsx --max-warnings=0",
     "test": "jest",
+    "test:e2e": "jest --runInBand --testMatch \"**/?(*.)+(e2e).[jt]s?(x)\"",
     "typecheck": "tsc --noEmit --jsx preserve"
   },
   "type": "module",
