--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "packages/internal/dex/sdk",
     "packages/internal/dex/sdk-sample-app",
     "packages/internal/bridge/sdk",
+    "packages/internal/guardian",
     "packages/internal/bridge/bridge-sample-app",
     "packages/checkout/sdk",
     "packages/checkout/sdk-sample-app",
