--- a/packages/passport/package.json
+++ b/packages/passport/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@imtbl/config": "0.0.0",
     "@imtbl/core-sdk": "^1.1.1-alpha.1",
+    "@imtbl/guardian": "0.0.0",
     "@imtbl/provider": "0.0.0",
     "@imtbl/toolkit": "0.0.0",
     "@magic-ext/oidc": "^1.0.1",
