--- a/packages/economy/sdk/package.json
+++ b/packages/economy/sdk/package.json
@@ -11,6 +11,7 @@
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
     "axios": "^1.3.5",
+    "immer": "^10.0.2",
     "linqts": "^1.15.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
