--- a/packages/checkout/sdk-sample-app/package.json
+++ b/packages/checkout/sdk-sample-app/package.json
@@ -17,6 +17,7 @@
     "@biom3/react": "^0.5.0-beta",
     "@imtbl/checkout-sdk": "0.0.0",
     "@imtbl/config": "0.0.0",
+    "ethers": "^6.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.0"
