--- a/packages/internal/openapi/package.json
+++ b/packages/internal/openapi/package.json
@@ -4,6 +4,9 @@
   "version": "0.0.0",
   "author": "Immutable",
   "bugs": "https://github.com/immutable/ts-immutable-sdk/issues",
+  "devDependencies": {
+    "rollup": "^3.23.0"
+  },
   "engines": {
     "node": ">=16.11.0"
   },
@@ -19,13 +22,8 @@
     "build": "NODE_ENV=production rollup --config rollup.config.js",
     "lint": "eslint ./src --ext .ts,.jsx,.tsx --max-warnings=0",
     "prepare": "wsrun -r build",
-    "test": "jest",
-    "test:watch": "jest --watch",
     "typecheck": "tsc --noEmit --jsx preserve"
   },
   "type": "module",
-  "types": "dist/index.d.ts",
-  "devDependencies": {
-    "rollup": "^3.23.0"
-  }
+  "types": "dist/index.d.ts"
 }
