--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "packages/config",
     "packages/immutablex_client",
     "packages/passport",
+    "packages/guardian",
     "packages/provider",
     "packages/provider/src/sample-app",
     "packages/orderbook",
@@ -62,7 +63,6 @@
     "packages/internal/dex/sdk",
     "packages/internal/dex/sdk-sample-app",
     "packages/internal/bridge/sdk",
-    "packages/internal/guardian",
     "packages/internal/bridge/bridge-sample-app",
     "packages/checkout/sdk",
     "packages/checkout/sdk-sample-app",
