override eslint rules we dont want to use

--- a/packages/economy/.eslintrc
+++ b/packages/economy/.eslintrc
@@ -4,5 +4,11 @@
   "parserOptions": {
     "project": "./tsconfig.json",
     "tsconfigRootDir": "."
+  },
+  "rules": {
+    "no-console": "off",
+    "class-methods-use-this": "off",
+    "no-param-reassign": "off",
+    "@typescript-eslint/naming-convention": "off"
   }
 }
