[GMS-697][NO-CHANGELOG] Add generated openapi internal package (#353)
Co-authored-by: Allan Almeida <allan.almeida@immutable.com>

--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "packages/internal/bridge/sdk",
     "packages/internal/guardian",
     "packages/internal/bridge/bridge-sample-app",
+    "packages/internal/multi-rollup-api-client",
     "packages/checkout/sdk",
     "packages/checkout/sdk-sample-app",
     "packages/checkout/widgets",
