--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "packages/checkout/widgets-lib",
     "packages/economy/sdk",
     "packages/economy/playground",
-    "packages/economy/services"
+    "packages/economy/services",
+    "packages/blockchain-data"
   ]
 }
