--- a/packages/blockchain-data/package.json
+++ b/packages/blockchain-data/package.json
@@ -5,8 +5,7 @@
   "bugs": "https://github.com/immutable/ts-immutable-sdk/issues",
   "dependencies": {
     "@imtbl/config": "0.0.0",
-    "@opensea/seaport-js": "^1.3.0",
-    "ethers": "^5.7.2"
+    "@imtbl/multi-rollup-api-client": "0.0.0"
   },
   "devDependencies": {
     "@rollup/plugin-typescript": "^11.0.0",
