--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "packages/provider",
     "packages/provider/src/sample-app",
     "packages/orderbook",
+    "packages/internal/contracts",
     "packages/internal/toolkit",
     "packages/internal/cryptofiat",
     "packages/internal/dex/sdk",
