--- a/packages/internal/contracts/package.json
+++ b/packages/internal/contracts/package.json
@@ -3,17 +3,14 @@
   "version": "0.0.0",
   "author": "Immutable",
   "bugs": "https://github.com/immutable/ts-immutable-sdk/issues",
-  "scripts": {},
+  "scripts": {
+    "generate-types": "typechain --target=ethers-v5 --out-dir=src/typechain/types './src/abi/*.json'"
+  },
   "homepage": "https://github.com/immutable/ts-immutable-sdk#readme",
   "license": "Apache-2.0",
   "main": "dist/index.js",
   "private": true,
   "repository": "immutable/ts-immutable-sdk.git",
-  "devDependencies": {},
-  "dependencies": {
-    "@imtbl/zkevm-contracts": "^1.0.3",
-    "@openzeppelin/contracts": "^4.8.2"
-  },
   "type": "module",
   "types": "dist/index.d.ts"
 }
