--- a/packages/internal/contracts/package.json
+++ b/packages/internal/contracts/package.json
@@ -1,16 +1,27 @@
 {
   "name": "@imtbl/contracts",
+  "description": "Contract bindings for internal usage",
   "version": "0.0.0",
   "author": "Immutable",
   "bugs": "https://github.com/immutable/ts-immutable-sdk/issues",
-  "scripts": {
-    "generate-types": "typechain --target=ethers-v5 --out-dir=src/typechain/types './src/abi/*.json'"
+  "engines": {
+    "node": ">=16.11.0"
   },
+  "files": [
+    "dist"
+  ],
   "homepage": "https://github.com/immutable/ts-immutable-sdk#readme",
   "license": "Apache-2.0",
   "main": "dist/index.js",
   "private": true,
   "repository": "immutable/ts-immutable-sdk.git",
+  "scripts": {
+    "build": "NODE_ENV=production rollup --config rollup.config.js",
+    "lint": "eslint ./src --ext .ts,.jsx,.tsx --max-warnings=0",
+    "prepare": "wsrun -r build",
+    "typecheck": "tsc --noEmit --jsx preserve",
+    "generate-types": "typechain --target=ethers-v5 --out-dir=src/typechain/types './src/abi/*.json'"
+  },
   "type": "module",
   "types": "dist/index.d.ts"
 }
