--- a/packages/blockchain-data/.eslintrc
+++ b/packages/blockchain-data/.eslintrc
@@ -4,5 +4,8 @@
   "parserOptions": {
     "project": "./tsconfig.json",
     "tsconfigRootDir": "."
+  },
+  "rules": {
+    "@typescript-eslint/comma-dangle": "off"
   }
 }
