[GMS-698][NO-CHANGELOG]: Adds erc721 bindings (#365)

--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "packages/provider",
     "packages/provider/src/sample-app",
     "packages/orderbook",
+    "packages/internal/contracts",
     "packages/internal/toolkit",
     "packages/internal/cryptofiat",
     "packages/internal/dex/sdk",
