--- a/packages/contracts/.eslintrc
+++ b/packages/contracts/.eslintrc
@@ -1,5 +1,5 @@
 {
-  "extends": ["../.eslintrc"],
+  "extends": ["../../.eslintrc"],
   "ignorePatterns": [],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
