--- a/packages/passport/package.json
+++ b/packages/passport/package.json
@@ -5,9 +5,11 @@
   "author": "Immutable",
   "bugs": "https://github.com/immutable/ts-immutable-sdk/issues",
   "dependencies": {
+    "@ethersproject/providers": "^5.7.2",
     "@imtbl/config": "0.0.0",
     "@imtbl/core-sdk": "^1.1.1-alpha.1",
     "@imtbl/guardian": "0.0.0",
+    "@imtbl/immutablex-client": "0.0.0",
     "@imtbl/provider": "0.0.0",
     "@imtbl/toolkit": "0.0.0",
     "@magic-ext/oidc": "^1.0.1",
