--- a/packages/erc721_permissioned_mintable/package.json
+++ b/packages/erc721_permissioned_mintable/package.json
@@ -10,6 +10,12 @@
   "files": [
     "dist"
   ],
+  "devDependencies": {
+    "@rollup/plugin-typescript": "^11.0.0",
+    "@swc/jest": "^0.2.24",
+    "@typechain/ethers-v5": "^10.2.0",
+    "rollup": "^3.17.2"
+  },
   "homepage": "https://github.com/immutable/ts-immutable-sdk#readme",
   "license": "Apache-2.0",
   "main": "dist/index.js",
