--- a/sdk/package.json
+++ b/sdk/package.json
@@ -24,6 +24,7 @@
     "@imtbl/checkout-widgets": "0.0.0",
     "@imtbl/config": "0.0.0",
     "@imtbl/cryptofiat": "0.0.0",
+    "@imtbl/erc20": "0.0.0",
     "@imtbl/erc721-permissioned-mintable": "0.0.0",
     "@imtbl/guardian": "0.0.0",
     "@imtbl/immutablex-client": "0.0.0",
@@ -82,9 +83,13 @@
       "types": "./dist/checkout_widgets.d.ts",
       "import": "./dist/checkout_widgets.js"
     },
-    "./erc721_permissioned_mintable": {
-      "types": "./dist/erc721_permissioned_mintable.d.ts",
-      "import": "./dist/erc721_permissioned_mintable.js"
+    "./erc20": {
+      "types": "./dist/erc20.d.ts",
+      "import": "./dist/erc20.js"
+    },
+    "./erc721-permissioned-mintable": {
+      "types": "./dist/erc721-permissioned-mintable.d.ts",
+      "import": "./dist/erc721-permissioned-mintable.js"
     }
   },
   "files": [
