GMS-701: pr review

--- a/sdk/module-release.json
+++ b/sdk/module-release.json
@@ -13,7 +13,9 @@
         "orderbook": "alpha",
         "provider": "prod",
         "checkout_sdk": "alpha",
-        "checkout_widgets": "alpha"
+        "checkout_widgets": "alpha",
+        "erc20": "alpha",
+        "erc721-permissioned-mintable": "alpha"
     },
     "fileCopy": [
         {
