[GMS-701][NO-CHANGELOG]: adds contracts package (#370)

--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
   "workspaces": [
     "sdk",
     "packages/config",
+    "packages/erc20",
+    "packages/erc721-permissioned-mintable",
     "packages/immutablex_client",
     "packages/passport",
     "packages/provider",
