--- a/sdk/package.json
+++ b/sdk/package.json
@@ -25,6 +25,8 @@
     "@imtbl/checkout-widgets": "0.0.0",
     "@imtbl/config": "0.0.0",
     "@imtbl/cryptofiat": "0.0.0",
+    "@imtbl/erc20": "0.0.0",
+    "@imtbl/erc721-permissioned-mintable": "0.0.0",
     "@imtbl/guardian": "0.0.0",
     "@imtbl/immutablex-client": "0.0.0",
     "@imtbl/orderbook": "0.0.0",
@@ -85,6 +87,14 @@
     "./checkout_widgets": {
       "types": "./dist/checkout_widgets.d.ts",
       "import": "./dist/checkout_widgets.js"
+    },
+    "./erc20": {
+      "types": "./dist/erc20.d.ts",
+      "import": "./dist/erc20.js"
+    },
+    "./erc721-permissioned-mintable": {
+      "types": "./dist/erc721-permissioned-mintable.d.ts",
+      "import": "./dist/erc721-permissioned-mintable.js"
     }
   },
   "files": [
