--- a/packages/internal/contracts/package.json
+++ b/packages/internal/contracts/package.json
@@ -17,10 +17,10 @@
   "repository": "immutable/ts-immutable-sdk.git",
   "scripts": {
     "build": "NODE_ENV=production rollup --config rollup.config.js",
+    "generate-types": "typechain --target=ethers-v5 --out-dir=src/typechain/types './src/abi/*.json'",
     "lint": "eslint ./src --ext .ts,.jsx,.tsx --max-warnings=0",
     "prepare": "wsrun -r build",
-    "typecheck": "tsc --noEmit --jsx preserve",
-    "generate-types": "typechain --target=ethers-v5 --out-dir=src/typechain/types './src/abi/*.json'"
+    "typecheck": "tsc --noEmit --jsx preserve"
   },
   "type": "module",
   "types": "dist/index.d.ts"
