--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "packages/economy/sdk",
     "packages/economy/playground",
     "packages/economy/services",
-    "packages/blockchain-data"
+    "packages/blockchain-data/sdk",
+    "packages/blockchain-data/sample-app"
   ]
 }
