--- a/packages/blockchain-data/sdk/.eslintrc
+++ b/packages/blockchain-data/sdk/.eslintrc
@@ -1,5 +1,5 @@
 {
-  "extends": ["../../.eslintrc"],
+  "extends": ["../../../.eslintrc"],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "project": "./tsconfig.json",
