--- a/packages/orderbook/package.json
+++ b/packages/orderbook/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@imtbl/config": "0.0.0",
     "@opensea/seaport-js": "^1.3.0",
+    "axios": "^1.3.5",
     "ethers": "^5.7.2"
   },
   "devDependencies": {
