--- a/packages/internal/guardian/package.json
+++ b/packages/internal/guardian/package.json
@@ -4,12 +4,6 @@
   "version": "0.0.0",
   "author": "Immutable",
   "bugs": "https://github.com/immutable/ts-immutable-sdk/issues",
-  "engines": {
-    "node": ">=16.0.0"
-  },
-  "files": [
-    "dist"
-  ],
   "devDependencies": {
     "@rollup/plugin-json": "^6.0.0",
     "@swc/core": "^1.3.36",
@@ -25,6 +19,12 @@
     "typechain": "^8.1.1",
     "typescript": "^4.9.5"
   },
+  "engines": {
+    "node": ">=16.0.0"
+  },
+  "files": [
+    "dist"
+  ],
   "homepage": "https://github.com/immutable/ts-immutable-sdk#readme",
   "keywords": [
     "immutablex"
@@ -34,10 +34,10 @@
   "module": "dist/module.js",
   "private": true,
   "repository": "immutable/ts-immutable-sdk.git",
-  "source": "./src/index.ts",
-  "type": "module",
-  "types": "dist/index.d.ts",
   "scripts": {
     "build": "NODE_ENV=production rollup --config rollup.config.js"
-  }
+  },
+  "source": "./src/index.ts",
+  "type": "module",
+  "types": "dist/index.d.ts"
 }
