--- a/sdk/package.json
+++ b/sdk/package.json
@@ -5,21 +5,19 @@
   "author": "Immutable",
   "bugs": "https://github.com/immutable/ts-immutable-sdk/issues",
   "dependencies": {
+    "@ethersproject/abstract-signer": "^5.7.0",
+    "@ethersproject/providers": "^5.7.2",
+    "@ethersproject/wallet": "^5.7.0",
     "@imtbl/core-sdk": "^1.1.1-alpha.1",
     "@magic-ext/oidc": "^1.0.1",
     "@metamask/detect-provider": "^2.0.0",
+    "@opensea/seaport-js": "^1.3.0",
     "axios": "^1.3.5",
+    "bn.js": "^5.2.1",
+    "enc-utils": "^3.0.0",
     "ethers": "^5.7.2",
     "magic-sdk": "^13.3.1",
-    "oidc-client-ts": "^2.2.1",
-    "@ethersproject/providers": "^5.7.2",
-    "@ethersproject/bignumber": "^5.7.0",
-    "@ethersproject/contracts": "^5.7.0",
-    "@opensea/seaport-js": "^1.3.0",
-    "@ethersproject/abstract-signer": "^5.7.0",
-    "@ethersproject/wallet": "^5.7.0",
-    "bn.js": "^5.2.1",
-    "enc-utils": "^3.0.0"
+    "oidc-client-ts": "^2.2.1"
   },
   "devDependencies": {
     "@imtbl/blockchain-data": "0.0.0",
