--- a/packages/internal/guardian/package.json
+++ b/packages/internal/guardian/package.json
@@ -4,6 +4,9 @@
   "version": "0.0.0",
   "author": "Immutable",
   "bugs": "https://github.com/immutable/ts-immutable-sdk/issues",
+  "dependencies": {
+    "axios": "^1.3.5"
+  },
   "devDependencies": {
     "@rollup/plugin-json": "^6.0.0",
     "@swc/core": "^1.3.36",
@@ -31,13 +34,11 @@
   ],
   "license": "Apache-2.0",
   "main": "dist/index.js",
-  "module": "dist/module.js",
   "private": true,
   "repository": "immutable/ts-immutable-sdk.git",
   "scripts": {
     "build": "NODE_ENV=production rollup --config rollup.config.js"
   },
-  "source": "./src/index.ts",
   "type": "module",
   "types": "dist/index.d.ts"
 }
