--- a/packages/blockchain-data/sample-app/package.json
+++ b/packages/blockchain-data/sample-app/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "@imtbl/blockchain-data": "0.0.0",
     "@imtbl/config": "0.0.0",
+    "@imtbl/erc721-permissioned-mintable": "0.0.0",
     "@types/node": "20.2.5",
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
