--- a/packages/blockchain-data/sample-app/package.json
+++ b/packages/blockchain-data/sample-app/package.json
@@ -2,6 +2,7 @@
   "name": "blockchain-data-sample-app",
   "version": "0.1.0",
   "dependencies": {
+    "@ethersproject/providers": "^5.7.2",
     "@imtbl/blockchain-data": "0.0.0",
     "@imtbl/config": "0.0.0",
     "@imtbl/erc721-permissioned-mintable": "0.0.0",
@@ -11,6 +12,7 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
+    "ethers": "^5.7.2",
     "next": "13.4.4",
     "postcss": "8.4.24",
     "react": "18.2.0",
