--- a/packages/blockchain-data/sample-app/package.json
+++ b/packages/blockchain-data/sample-app/package.json
@@ -6,19 +6,19 @@
     "@imtbl/blockchain-data": "0.0.0",
     "@imtbl/config": "0.0.0",
     "@imtbl/erc721-permissioned-mintable": "0.0.0",
-    "@types/node": "20.2.5",
-    "@types/react": "18.2.7",
-    "@types/react-dom": "18.2.4",
+    "@types/node": "^18.14.2",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
     "autoprefixer": "10.4.14",
-    "eslint": "8.41.0",
-    "eslint-config-next": "13.4.4",
+    "eslint": "^8.40.0",
+    "eslint-config-next": "13.3.1",
     "ethers": "^5.7.2",
-    "next": "13.4.4",
-    "postcss": "8.4.24",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "next": "13.3.1",
+    "postcss": "8.4.23",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tailwindcss": "3.3.2",
-    "typescript": "5.0.4"
+    "typescript": "^4.9.5"
   },
   "private": true,
   "scripts": {
