--- a/packages/blockchain-data/sample-app/.eslintrc.json
+++ b/packages/blockchain-data/sample-app/.eslintrc.json
@@ -1,11 +1,8 @@
 {
-  "extends": ["../../.eslintrc"],
+  "extends": ["../../../.eslintrc"],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "project": "./tsconfig.json",
     "tsconfigRootDir": "."
-  },
-  "rules": {
-    "@typescript-eslint/comma-dangle": "off"
   }
 }
