--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "packages/internal/dex/sdk",
     "packages/internal/dex/sdk-sample-app",
     "packages/internal/bridge/sdk",
+    "packages/internal/generated-clients",
     "packages/internal/guardian",
     "packages/internal/bridge/bridge-sample-app",
     "packages/internal/multi-rollup-api-client",
