--- a/packages/internal/generated-clients/tsconfig.json
+++ b/packages/internal/generated-clients/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
+    "baseUrl": "./src",
     "outDir": "./dist",
-    "rootDirs": ["."],
+    "rootDirs": ["src"],
     "target": "es2022",
     "module": "esnext",
     "moduleResolution": "node",
@@ -15,5 +16,7 @@
     "declaration": true,
     "resolveJsonModule": true,
     "skipLibCheck": true
-  }
+  },
+  "include": ["src"],
+  "exclude": ["node_modules", "dist"]
 }
