--- a/packages/internal/.eslintignore
+++ b/packages/internal/.eslintignore
@@ -4,6 +4,6 @@ dist/
 **sample-app**/
 
 # auto-generated code
-generated-api-clients/
+generated-clients/
 
 # put module specific ignore paths here
