--- a/packages/blockchain-data/sdk/package.json
+++ b/packages/blockchain-data/sdk/package.json
@@ -6,7 +6,7 @@
   "bugs": "https://github.com/immutable/ts-immutable-sdk/issues",
   "dependencies": {
     "@imtbl/config": "0.0.0",
-    "@imtbl/multi-rollup-api-client": "0.0.0"
+    "@imtbl/generated-clients": "0.0.0"
   },
   "devDependencies": {
     "@rollup/plugin-typescript": "^11.0.0",
