--- a/packages/checkout/widgets-lib/package.json
+++ b/packages/checkout/widgets-lib/package.json
@@ -17,6 +17,7 @@
     "@biom3/design-tokens": "0.2.0-beta",
     "@biom3/react": "^0.5.11-beta",
     "@ethersproject/providers": "^5.7.2",
+    "@imtbl/bridge-sdk": "0.0.0",
     "@imtbl/checkout-sdk": "0.0.0",
     "@imtbl/checkout-widgets": "0.0.0",
     "@imtbl/config": "0.0.0",
