--- a/packages/internal/generated-clients/package.json
+++ b/packages/internal/generated-clients/package.json
@@ -5,6 +5,7 @@
   "author": "Immutable",
   "bugs": "https://github.com/immutable/ts-immutable-sdk/issues",
   "devDependencies": {
+    "jest": "^29.5.0",
     "rollup": "^3.17.2"
   },
   "engines": {
@@ -21,6 +22,7 @@
   "scripts": {
     "build": "NODE_ENV=production rollup --config rollup.config.js",
     "prepare": "wsrun -r build",
+    "test": "jest",
     "typecheck": "tsc --noEmit --jsx preserve"
   },
   "type": "module",
