--- a/packages/passport/package.json
+++ b/packages/passport/package.json
@@ -5,9 +5,8 @@
   "author": "Immutable",
   "bugs": "https://github.com/immutable/ts-immutable-sdk/issues",
   "dependencies": {
-    "@0xsequence/relayer": "^0.43.29",
-    "@0xsequence/transactions": "^0.43.29",
-    "@0xsequence/wallet": "^0.43.29",
+    "@0xsequence/abi": "^0.43.30",
+    "@0xsequence/config": "^0.43.30",
     "@ethersproject/providers": "^5.7.2",
     "@imtbl/config": "0.0.0",
     "@imtbl/core-sdk": "^1.1.1-alpha.1",
