rename immutablex_client to immutablex-client for consistency

--- a/sdk/module-release.json
+++ b/sdk/module-release.json
@@ -9,7 +9,7 @@
     "modules": {
         "config": "prod",
         "blockchain-data": "alpha",
-        "immutablex_client": "prod",
+        "immutablex-client": "prod",
         "passport": "prod",
         "orderbook": "alpha",
         "provider": "prod",
