Fix import in test. Install TypeScript dev dep.

--- a/packages/internal/generated-clients/package.json
+++ b/packages/internal/generated-clients/package.json
@@ -6,7 +6,8 @@
   "bugs": "https://github.com/immutable/ts-immutable-sdk/issues",
   "devDependencies": {
     "jest": "^29.4.3",
-    "rollup": "^3.17.2"
+    "rollup": "^3.17.2",
+    "typescript": "^4.9.5"
   },
   "engines": {
     "node": ">=16.11.0"
