--- a/.github/workflows/build-lint-typecheck-test.yaml
+++ b/.github/workflows/build-lint-typecheck-test.yaml
@@ -45,7 +45,7 @@ jobs:
         run: yarn lint
 
       - name: Build
-        run: yarn build
+        run: export NODE_OPTIONS=--max-old-space-size=6144 && yarn build
 
       - name: Typecheck
         run: yarn typecheck
