--- a/packages/internal/generated-clients/package.json
+++ b/packages/internal/generated-clients/package.json
@@ -5,7 +5,9 @@
   "author": "Immutable",
   "bugs": "https://github.com/immutable/ts-immutable-sdk/issues",
   "devDependencies": {
-    "rollup": "^3.17.2"
+    "jest": "^29.4.3",
+    "rollup": "^3.17.2",
+    "typescript": "^4.9.5"
   },
   "engines": {
     "node": ">=16.11.0"
@@ -21,6 +23,7 @@
   "scripts": {
     "build": "NODE_ENV=production rollup --config rollup.config.js",
     "prepare": "wsrun -r build",
+    "test": "jest",
     "typecheck": "tsc --noEmit --jsx preserve"
   },
   "type": "module",
