--- a/packages/checkout/sdk/package.json
+++ b/packages/checkout/sdk/package.json
@@ -8,6 +8,7 @@
     "@ethersproject/providers": "^5.7.2",
     "@imtbl/bridge-sdk": "0.0.0",
     "@imtbl/config": "0.0.0",
+    "@imtbl/dex-sdk": "0.0.0",
     "@metamask/detect-provider": "^2.0.0",
     "ethers": "^5.7.2"
   },
