--- a/.github/workflows/economy-playground-storybook.yaml
+++ b/.github/workflows/economy-playground-storybook.yaml
@@ -44,4 +44,4 @@ jobs:
         run: cd packages/economy/playground
 
       - name: Publish Economy Playground to Chromatic
-        run: npx chromatic --project-token=${{ secrets.CHROMATIC_PROJECT_TOKEN }} -d "../../packages/economy/playground/storybook-static" --exit-zero-on-changes
+        run: npx chromatic --project-token=${{ secrets.CHROMATIC_PROJECT_TOKEN }} -d "./storybook-static" --exit-zero-on-changes
