--- a/packages/internal/contracts/package.json
+++ b/packages/internal/contracts/package.json
@@ -5,8 +5,23 @@
   "author": "Immutable",
   "bugs": "https://github.com/immutable/ts-immutable-sdk/issues",
   "devDependencies": {
+    "@nomicfoundation/hardhat-chai-matchers": "^2.0.0",
+    "@nomicfoundation/hardhat-ethers": "^3.0.0",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
+    "@nomicfoundation/hardhat-toolbox": "^3.0.0",
+    "@nomicfoundation/hardhat-verify": "^1.0.0",
+    "@nomiclabs/hardhat-ethers": "^2.2.3",
     "@rollup/plugin-typescript": "^11.0.0",
-    "rollup": "^3.17.2"
+    "@typechain/ethers-v6": "^0.4.0",
+    "@typechain/hardhat": "^8.0.0",
+    "@types/chai": "^4.2.0",
+    "@types/mocha": ">=9.1.0",
+    "chai": "^4.2.0",
+    "hardhat": "^2.15.0",
+    "hardhat-gas-reporter": "^1.0.8",
+    "rollup": "^3.17.2",
+    "solidity-coverage": "^0.8.1",
+    "typechain": "^8.2.0"
   },
   "engines": {
     "node": ">=16.11.0"
